# ar-diffusion-2d

./: .gitignore  NINEGRID.md  pyproject.toml  requirements.txt  requirements_eva.txt  requirements_llada.txt
baseline_eval/: Evaluator_4grid.py  Evaluatorall.py  config.py  run_eval.py
data/: four_grid.csv
eval_pkg/: __init__.py  dataset.py  eval_types.py  evaluator.py  models.py  prompt.py  results.py  run.sh  run_eval.py  run_serial.sh
experiments/: results_GSAI_ML_LLaDA_8B_Instruct_zero_shot_hard_20260411_223802.json  results_GSAI_ML_LLaDA_8B_Instruct_zero_shot_medium_20260411_192647.json  results_GSAI_ML_LLaDA_8B_Instruct_zero_shot_medium_20260411_202125.json  results_GSAI_ML_LLaDA_8B_Instruct_zero_shot_medium_20260412_172119.json  results_Meta_Llama_3_8B_Instruct_zero_shot_20260406_180124.json  results_Meta_Llama_3_8B_Instruct_zero_shot_20260406_183058.json  results_Meta_Llama_3_8B_Instruct_zero_shot_20260406_222727.json  results_Meta_Llama_3_8B_Instruct_zero_shot_20260407_192345.json  results_Meta_Llama_3_8B_Instruct_zero_shot_20260408_035748.json  results_deepseek_ai_deepseek_math_7b_instruct_zero_shot_hard_20260412_001500.json  results_deepseek_ai_deepseek_math_7b_instruct_zero_shot_medium_20260408_104504.json  results_deepseek_ai_deepseek_math_7b_instruct_zero_shot_medium_20260412_002451.json  results_meta_llama_Meta_Llama_3_8B_Instruct_zero_shot_medium_20260407_162915.json  results_meta_llama_Meta_Llama_3_8B_Instruct_zero_shot_medium_20260407_164242.json  results_meta_llama_Meta_Llama_3_8B_Instruct_zero_shot_medium_20260409_170128.json  (+1 more)
(+48 files in other folders)
