[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arvdiffusion"
version = "0.1.0"
description = "Code for evaluating diffusion language models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "William Convertino", email = "williamconvertino@gmail.com" },
]

dependencies = [
    # Core
    "torch>=2.1,<2.10",
    "numpy>=1.26.4",
    "transformers>=4.57.1",
    "datasets>=3.1.0",
    "huggingface-hub>=0.19.3,<1.0",
    "accelerate>=1.3.0",
    "peft>=0.11.0",
    "hydra-core>=1.2.0,<1.3",
    "omegaconf>=2.2.0,<2.3",
    
    # Util
    "tensorboard>=2.13,<3.0",
    "wandb>=0.16.0,<0.18",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
    "rotary-embedding-torch>=0.8.9",
    "zstandard>=0.22.0",
    
    # LM Evaluation
    "lm-eval[hf]",
]